# rsrs

./: Cargo.toml  shell.nix
rsrs/: Cargo.toml
rsrs/src/: lib.rs
rsrs/src/model/: quest.rs  skills.rs
src/: lib.rs  main.rs
src/model/: config.rs  mod.rs  profile.rs  quest.rs
