[package]
name = "rsq"
version = "0.1.0"
authors = ["Evan Stoll <evan.stoll@rjginc.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
async-std = { version = "1.9.0", features = [ "attributes" ] }
dotenv = "0.15.0"
envy = "0.4.2"
log = "0.4.13"
rsrs = { path = "./rsrs" }
serde = { version = "1.0.119", features = [ "derive" ]}
tracing = "0.1.22"
tracing-log = "0.1.1"
tracing-subscriber = "0.2.15"

[workspace]
members = [ "rsrs" ]
