[package]
name = "rsrs"
version = "0.1.0"
authors = ["Evan Stoll <evanjsx@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.11.0", features = [ "json" ]}
serde = "1.0.119"
serde_derive = "1.0.119"
serde_json = "1.0.61"
log = "0.4.13"
anyhow = "1.0.38"
async-std = { version = "1.8.0", features = [ "attributes", "tokio1" ] }
#tokio = { version = "1.0.2", features = [ "macros", "rt-multi-thread" ] }

[dev-dependencies]
env_logger = "0.8.2"
